--- a/CarShop/CarShop/wwwroot/index.html
+++ b/CarShop/CarShop/wwwroot/index.html
@@ -8,6 +8,15 @@
 <body>
     
     <div class="container">
+
+        <div id="loginForm">
+            <label for="login">Login: </label>
+            <input type="text" id="login" />
+            <label for="password">Password: </label>
+            <input type="text" id="password" />
+            <button id="submitLogin">Login</button>
+        </div>
+
         <h1>Car list</h1>
 
         <div id="errors" class="alert alert-danger" style="display:none;"></div>
